--- a/docs/JavaScript/JavaScript高级程序设计/作用域.md
+++ b/docs/JavaScript/JavaScript高级程序设计/作用域.md
@@ -1,24 +1,37 @@
 # 作用域
 
-## 执行环境（execution context）
+## 执行环境(execution context)
 
-执行环境**是JavaScript中最为重要的一个概念。
-执行环境定义了变量或函数有权访问的其他数据，决定了他们各自的行为。每个执行环境都有一个与之关联的**变量对象（variable object）**，环境中定义的所有变量和函数都保存在这个对象中。虽然我们编写的代码无法访问这个对象，但解析器在处理数据时会在后台使用它。
-- 某个执行环境中的所有代码执行完毕后，该环境被销毁，保存在其中的所有变量和函数定义也随之销毁。
-  - 每个函数都有自己的**执行环境**。当执行流进入一个函数时，函数的环境就会被推入一个**环境栈**中。而在函数执行之后，栈将其环境弹出，把控制权返回给之前的执行环境。
-- 当代码在一个环境中执行时，会创建**变量对象**的一个**作用域链（scope chain）**。
-  - 作用域链的用途，是保证对执行环境有权访问的所有变量和函数的有序访问。
-  - 作用域链的前端，始终都是当前执行的代码所在环境的**变量对象**。
-  - 如果这个环境是函数，则将其**活动对象（activation object）**作为变量对象。
-    - 活动对象在最开始时只包含一个变量，即arguments对象（这个对象在全局环境中是不存在的）。
-    - 作用域链中的下一个变量对象来自包含（外部）环境，而再下一个变量对象则来自下一个包含环境。
-    - 这样，一直延续到全局执行环境；全局执行环境的变量对象始终都是作用域链中的最后一个对象。
-- **标识符解析**是沿着作用域链一级一级地搜索标识符的过程。
-  - 所谓标识符，就是指变量、函数、属性的名字，或者函数的参数。
-  - 搜索过程始终从作用域链的前端开始，然后逐级地向后回溯，直至找到标识符为止（如果找不到标识符，通常会导致错误发生）
+**执行环境**是JavaScript中最为重要的一个概念。
+
+执行环境定义了变量或函数有权访问的其他数据，决定了他们各自的行为。
+
+?> 每个执行环境都有一个与之关联的**变量对象（variable object）**，环境中定义的所有变量和函数都保存在这个对象中。虽然我们编写的代码无法访问这个对象，但解析器在处理数据时会在后台使用它。
+
+!> 某个执行环境中的所有代码执行完毕后，该环境被销毁，保存在其中的所有变量和函数定义也随之销毁。
+
+每个函数都有自己的**执行环境**。当执行流进入一个函数时，函数的环境就会被推入一个**环境栈**中。而在函数执行之后，栈将其环境弹出，把控制权返回给之前的执行环境。
+
+## **作用域链（scope chain）** 
+
+当代码在一个环境中执行时，会创建**变量对象**的一个**作用域链（scope chain）**。
+- 作用域链的用途，是保证对执行环境有权访问的所有变量和函数的有序访问。
+- 作用域链的前端，始终都是当前执行的代码所在环境的**变量对象**。
+- 如果这个环境是函数，则将其**活动对象（activation object）**作为变量对象。
+  - 活动对象在最开始时只包含一个变量，即 `arguments` 对象（这个对象在全局环境中是不存在的）。
+  - 作用域链中的下一个变量对象来自包含（外部）环境，而再下一个变量对象则来自下一个包含环境。
+  - 这样，一直延续到全局执行环境；全局执行环境的变量对象始终都是作用域链中的最后一个对象。
 
 
+## 标识符解析
 
-- 在局部作用域中定义的变量可以在局部环境中与全局变量互换使用
-- 内部环境可以通过作用域链访问所有的外部环境，但外部环境不能访问内部环境中的任何变量和函数。
-- 每个环境都可以向上搜索作用域链，以查询变量和函数名；但任何环境都不能通过向下搜索作用域链而进入另一个执行环境。
+**标识符解析**是沿着作用域链一级一级地搜索标识符的过程。
+
+- 所谓标识符，就是指变量、函数、属性的名字，或者函数的参数。
+- 搜索过程始终从作用域链的前端开始，然后逐级地向后回溯，直至找到标识符为止（如果找不到标识符，通常会导致错误发生）
+
+## Main Take-away
+
+?> 内部环境可以通过作用域链访问所有的外部环境，但外部环境不能访问内部环境中的任何变量和函数。
+
+?> 每个环境都可以向上搜索作用域链，以查询变量和函数名；但任何环境都不能通过向下搜索作用域链而进入另一个执行环境。
