--- a/docs/JavaScript/JavaScript高级程序设计/4_变量、作用域和内存问题.md
+++ b/docs/JavaScript/JavaScript高级程序设计/4_变量、作用域和内存问题.md
@@ -1,6 +1,27 @@
-# 作用域
+# 第4章 变量、作用域和内存问题
 
-## 执行环境(execution context)
+## 4.1 基本类型和引用类型的值
+
+- 基本类型值
+
+  > 简单的数据段
+
+- 引用类型值
+
+  > 可能由多个值构成的对象
+
+在将一个值赋给变量时，*解析器* 必须确定这个值是基本类型值还是引用类型值
+
+?> **基本类型值**在内存中占据固定大小的空间，因此被保存在**栈内存**中
+
+?> **引用类型的值**是对象，保存在**堆内存**中
+
+!> 包含引用类型值的变量实际上包含的并不是对象本身，而是一个**指向该对象的指针**；从一个变量向另一个变量复制引用类型的值，复制的其实是指针，因此两个变量最终都指向同一个对象。
+
+
+## 4.2 执行环境及作用域
+
+#### 执行环境(execution context)
 
 **执行环境**是JavaScript中最为重要的一个概念。
 
@@ -12,9 +33,10 @@
 
 每个函数都有自己的**执行环境**。当执行流进入一个函数时，函数的环境就会被推入一个**环境栈**中。而在函数执行之后，栈将其环境弹出，把控制权返回给之前的执行环境。
 
-## **作用域链（scope chain）** 
+#### **作用域链（scope chain）** 
 
 当代码在一个环境中执行时，会创建**变量对象**的一个**作用域链（scope chain）**。
+
 - 作用域链的用途，是保证对执行环境有权访问的所有变量和函数的有序访问。
 - 作用域链的前端，始终都是当前执行的代码所在环境的**变量对象**。
 - 如果这个环境是函数，则将其**活动对象（activation object）**作为变量对象。
@@ -22,16 +44,20 @@
   - 作用域链中的下一个变量对象来自包含（外部）环境，而再下一个变量对象则来自下一个包含环境。
   - 这样，一直延续到全局执行环境；全局执行环境的变量对象始终都是作用域链中的最后一个对象。
 
-
-## 标识符解析
+#### 标识符解析
 
 **标识符解析**是沿着作用域链一级一级地搜索标识符的过程。
 
 - 所谓标识符，就是指变量、函数、属性的名字，或者函数的参数。
 - 搜索过程始终从作用域链的前端开始，然后逐级地向后回溯，直至找到标识符为止（如果找不到标识符，通常会导致错误发生）
 
-## Main Take-away
+#### Main Take-away
 
 ?> 内部环境可以通过作用域链访问所有的外部环境，但外部环境不能访问内部环境中的任何变量和函数。
 
 ?> 每个环境都可以向上搜索作用域链，以查询变量和函数名；但任何环境都不能通过向下搜索作用域链而进入另一个执行环境。
+
+## 4.3 垃圾收集
+
+
+
