--- a/docs/设计模式/HeadFirst设计模式/1_设计模式入门.md
+++ b/docs/设计模式/HeadFirst设计模式/1_设计模式入门.md
@@ -1,3 +1,15 @@
 # 1. 设计模式入门
 
-## 模拟鸭子应用
+?> *设计原则* 找出应用中可能需要变化之处，把它们独立出来，不要和那些不需要变化的代码混在一起。
+
+换句话说，如果每次新的需求一来，都会使某方面的代码发生变化，那么你就可以确定，这部分的代码需要被抽出来，和其他稳定的代码有所区分。
+
+> 把会变化的部分取出并封装起来，以便以后可以轻易地改动或扩充此部分，而不影响不需要变化的其他部分。
+
+
+
+?> *设计原则* 针对接口/超类型（supertype）编程，而不是针对实现编程。
+
+## 策略模式(Strategy Pattern)
+
+?> **策略模式**定义了算法族，分别封装起来，让它们之间可以互相替换，此模式让算法的变化独立于使用算法的客户。
