--- a/docs/设计模式/HeadFirst设计模式/2_观察者模式.md
+++ b/docs/设计模式/HeadFirst设计模式/2_观察者模式.md
@@ -1,2 +1,10 @@
 # 2. 观察者模式
 > 让你的对象知悉现况
+
+
+
+?> **观察者（Observer）模式**定义了对象之间的一对多依赖，这样一来，当一个对象改变状态时，他的所有依赖者都会收到通知并自动更新。
+
+
+
+实现观察者模式的方法不只一种，但是以包含Subject和Observer接口的类设计的做法最常见。
