--- a/docs/JavaScript/JavaScript高级程序设计/3_基本概念.md
+++ b/docs/JavaScript/JavaScript高级程序设计/3_基本概念.md
@@ -18,6 +18,16 @@
 
 > 而这也正是使用 `typeof` 操作符检测 `null` 值时会返回 "`object`"的原因
 
+
+
+### 3.4.5 Number类型
+
+#### 4. 数值转换
+
+有3个**函数**可以把非数值转换为数值：`Number()`、`parseInt()` 和 `parseFloat()`。
+
+第一个函数，即**转型函数 `Number()` **可以用于任何数据类型，而另两个函数则专门用于把字符串转换成数值。
+
 ## 3.7 函数
 
 ECMAScript中的函数在定义时不必指定是否返回值。
