--- a/docs/JavaScript/JavaScript高级程序设计/13_事件.md
+++ b/docs/JavaScript/JavaScript高级程序设计/13_事件.md
@@ -2,9 +2,37 @@
 
 ## 13.1 事件流
 
+?> 页面的哪一部分会拥有某个特定的事件？
+
+换句话说，如果你单击了某个按钮，单击事件不仅仅发生在按钮上。在单击按钮的同时，你也单击了按钮的容器元素，甚至也单击了整个页面。
+
+**事件流**描述的是从页面中接收事件的顺序。
+
+### 13.1.1 事件冒泡（event bubbling）
+
+事件开始时由最具体的元素（文档中嵌套层次最深的那个节点）接收，然后逐级向上传播到较为不具体的节点（文档）。
+
+### 13.1.2 事件捕获（event capturing）
+
+事件捕获的思想是不太具体的节点应该更早接收到事件，而最具体的节点应该最后接收到事件。
+
+事件捕获的用意在于在事件到达预定目标之前捕获它。
+
 ## 13.2 事件处理程序
 
+**事件**（ciel按：见13.4 事件类型）就是用户或浏览器自身执行的某种动作。诸如 `click`、`load` 和 `mouseover`，都是事件的名字。而响应某个事件的函数就叫做**事件处理程序**（或**事件侦听器**）。事件处理程序的名字以“on”开头，因此 `click` 事件的事件处理程序就是 `onclick`，`load` 事件的事件处理程序就是 `onload`。
+
+### 13.2.1 HTML事件处理程序
+
+### 13.2.2 DOM0级事件处理程序
+
+### 13.2.3 DOM2级事件处理程序
+
 ## 13.3 事件对象
+
+### 13.3.1 DOM中的事件对象
+
+
 
 ## 13.4 事件类型
 
