--- a/docs/JavaScript/JavaScript高级程序设计/7_函数表达式.md
+++ b/docs/JavaScript/JavaScript高级程序设计/7_函数表达式.md
@@ -34,3 +34,17 @@ var functionName = function(arg0, arg1, arg2) {
 
 ## 7.3 模仿块级作用域
 
+JavaScript没有块级作用域的概念。
+
+?> 这意味着在块语句中定义的变量，实际上是在包含函数中而非语句中创建的。
+
+```javascript
+function outputNumbers(count) {
+  for (var i=0; i < count; i++) {
+    alert(i)
+  }
+  alert(i) // 仍然能访问到
+}
+```
+
+在Java、C++等语言中，变量 `i` 只会在 `for` 循环的语句块中有定义，循环一旦结束，变量 `i` 就会被销毁。可是在JavaScript中，变量 `i` 是定义在 `outputNumbers()` 的活动对象中的，因此从它有定义开始，就可以在函数内部随处访问它。
