Documentation category added

--- a/docs/避坑手册.md
+++ b/docs/避坑手册.md
@@ -1,1 +1,16 @@
 !> 不！这些坑你不想再踩了！
+
+
+
+### first:child选择器失效
+
+> 和前面的元素中间记得加空格
+
+### 图片缩放
+
+### 有了relative position一定要定width？
+
+
+
+### Responsive sense!!!
+
