--- a/docs/CSS/CSS揭秘/1_引言.md
+++ b/docs/CSS/CSS揭秘/1_引言.md
@@ -1,1 +1,14 @@
 # 1. 引言
+
+## CSS编码技巧
+
+### 关于响应式网页设计
+
+一些可能会帮你避免不必要的媒体查询的建议：
+
+- 使用百分比长度来取代固定长度。如果实在做不到这一点，也应该尝试使用与视口相关的单位（`vw`、`vh`、`vmin` 和 `vmax`），它们的值解析为视口宽度或高度的百分比。
+- 当你需要在较大分辨率下得到固定宽度时，使用 `max-width` 而不是 `width`，因为它可以适应较小的分辨率，而无需使用媒体查询。
+- 不要忘记为替换元素（比如 `img`、`object`、`video`、`iframe` 等）设置一个 `max-width`，值为100%。
+- 假如背景图片需要完整地铺满一个容器，不管容器的尺寸如何变化，`background-size: cover` 这个属性都可以做到。但是，我们也要时刻牢记 —— 带宽并不是无限的，因此在移动网页中通过CSS把一张大图缩小显示往往是不太明智的。
+- 当图片（或其他元素）以行列式进行布局时，让视口的宽度来决定列的数量。弹性盒布局（即Flexbox）或者 `display: inline-block` 加上常规的文本折行行为，都可以实现这一点。
+- 在使用多列文本时，指定 `column-width`（列宽）而不是指定 `column-count`（列数），这样它就可以在较小的屏幕上自动显示为单列布局。
