--- a/docs/拙劣的总结.md
+++ b/docs/拙劣的总结.md
@@ -1,4 +1,8 @@
-# 响应式布局
+# 
+
+
+
+## 响应式布局
 
 响应式布局，主要分三种不同的设备
 
@@ -8,4 +12,18 @@
 
 
 
-设置根元素的字体大小，再根据 `rem` 来进行比例的响应。
+### Media query方法 
+
+1. 在 `<head>` 中加入 `<meta name="viewport" content="width=device-width, initial-scale=1">` 标签
+
+2. 设置根元素的字体大小，再根据 `rem` 来进行比例的响应。
+
+### Bootstrap方法
+
+栅格系统
+
+
+
+## Vue
+
+`keep-alive` 组件可以避免页面重复渲染，它本身是一个抽象组件，不会显示在DOM结构中
