--- a/docs/JavaScript/JavaScript高级程序设计/5_引用类型.md
+++ b/docs/JavaScript/JavaScript高级程序设计/5_引用类型.md
@@ -1,5 +1,9 @@
 # 第5章 引用类型
 
+引用类型的值（对象）是**引用类型**的一个实例。
+
+?> 在ECMAScript中，**引用类型**是一种数据结构，用于将数据和功能组织在一起。
+
 ## 5.1 **Object**类型
 
 ## 5.2 **Array**类型
@@ -10,7 +14,7 @@
 
 ## 5.5 **Function**类型
 
-**函数实际上是对象**
+?> **函数实际上是对象**
 
 - 每个函数都是 `Function` 类型的实例，而且都与其他引用类型一样具有属性和方法。
 - 由于函数是对象，因此函数名实际上也是一个指向函数对象的指针，不会与某个函数绑定。
@@ -88,6 +92,10 @@ function callSomeFunction(someFunction, someArgument) {
 ### 5.5.4 函数内部属性
 
 ### 5.5.5 函数属性和方法
+
+ECMAScript中的函数是对象，因此函数也有属性和方法。
+
+每个函数都包含两个属性：`length` 和 `prototype`。
 
 ## 5.6 基本包装类型
 
