--- a/docs/JavaScript/JavaScript高级程序设计/4_变量、作用域和内存问题.md
+++ b/docs/JavaScript/JavaScript高级程序设计/4_变量、作用域和内存问题.md
@@ -27,7 +27,7 @@
 
 执行环境定义了变量或函数有权访问的其他数据，决定了他们各自的行为。
 
-?> 每个执行环境都有一个与之关联的**变量对象（variable object）**，环境中定义的所有变量和函数都保存在这个对象中。虽然我们编写的代码无法访问这个对象，但解析器在处理数据时会在后台使用它。
+?> 每个执行环境都有一个与之关联的**变量对象（variable object）**，**环境中定义的所有变量和函数都保存在这个对象中**。虽然我们编写的代码无法访问这个对象，但解析器在处理数据时会在后台使用它。
 
 !> 某个执行环境中的所有代码执行完毕后，该环境被销毁，保存在其中的所有变量和函数定义也随之销毁。
 
