--- a/docs/拙劣的总结.md
+++ b/docs/拙劣的总结.md
@@ -27,3 +27,7 @@
 ## Vue
 
 `keep-alive` 组件可以避免页面重复渲染，它本身是一个抽象组件，不会显示在DOM结构中
+
+## ElementUI
+
+当要各种用到 `margin-left: -105px` 这种鬼的时候，试着在元素外包裹 `<el-row>` 和 `<el-col>` 来布局吧！
