--- a/docs/设计模式/HeadFirst设计模式/1_设计模式入门.md
+++ b/docs/设计模式/HeadFirst设计模式/1_设计模式入门.md
@@ -10,6 +10,8 @@
 
 ?> *设计原则* 针对接口/超类型（supertype）编程，而不是针对实现编程。
 
+?> *设计原则* 多用组合，少用继承。
+
 ## 策略模式(Strategy Pattern)
 
 ?> **策略模式**定义了算法族，分别封装起来，让它们之间可以互相替换，此模式让算法的变化独立于使用算法的客户。
