--- a/docs/避坑手册.md
+++ b/docs/避坑手册.md
@@ -2,15 +2,8 @@
 
 
 
-### first:child选择器失效
+### `:first:child` 选择器失效
 
-> 和前面的元素中间记得加空格
-
-### 图片缩放
-
-### 有了relative position一定要定width？
-
-
-
-### Responsive sense!!!
+> - 如果和前面的元素中间有空格，即表示选择的是前面元素的第一个子元素
+> - 如果没有空格，即表示选择的是**跟前面子元素同一父元素的第一个子元素**（<--- so tricky
 
