--- a/docs/JavaScript/JavaScript忍者秘籍/5_精通函数：闭包和作用域.md
+++ b/docs/JavaScript/JavaScript忍者秘籍/5_精通函数：闭包和作用域.md
@@ -6,12 +6,348 @@
 
 ## 5.1 理解闭包
 
+闭包允许函数访问并操作函数外部的变量。只要变量或函数存在于声明函数时的作用域内，闭包即可使函数能够访问这些变量或函数。
+
+所声明的函数可以在声明之后的任何时间被调用，甚至当该函数声明的作用域消失之后仍然可以调用。
+
+```javascript
+var outerValue = "ninja"; // 在全局作用域中定义一个变量
+
+function outerFunction() { // 在全局作用域中声明函数
+	assert(outerValue === "ninja","I can see the ninja.");
+}
+
+outerFunction();
+```
+
+仔细研究一下内部函数 `innerFunction` 中的代码，看看我们能否预测会发生什么。
+
+> - 第一个断言肯定会通过，因为外部变量 `outerValue` 在全局作用域内，并且在任何地方都可见。但是第二个断言呢？
+> - 外部函数执行后，我们通过将**内部函数的引用**赋值给全局变量 `later`，再通过 `later` 调用内部函数
+>
+>   - 当内部函数执行时，外部函数的作用域已经不存在了，并且在通过 `later` 调用内部函数时，外部函数的作用域已不可见了
+>
+>   - 所以我们可以很好地预见断言失败，因为内部变量 `innerValue` 肯定是 `undefined`，对吧？
+
+执行完测试发现，尽管试图隐藏在函数体内，但是仍然能够检测到 `ninja` 变量
+
+```javascript
+var outerValue = "samurai";
+var later; // 声明一个空变量，稍后在后面的代码中使用
+
+function outerFunction() {
+	var innerValue = "ninja";
+
+	function innerFunction() {
+		assert(outerValue === "samurai", "I can see the samurai.");
+		assert(innerValue === "ninja", "I can see the ninja.");
+	}
+
+	later = innerFunction; // 将内部函数 `innerFunction` 的引用存储在变量 `later` 上，因为 `later` 在全局作用域内，所以我们可以对它进行调用
+}
+
+outerFunction(); // 调用 `outerFunction` 函数，创建内部函数 `innerFunction`，并将内部函数赋值给变量 `later`
+later(); // 通过 `later` 调用内部函数。我们不能直接调用内部函数，因为它的作用域（和 `innerValue` 一起）被限制在外部函数 `outerFunction` 之内
+```
+
+当在外部函数中声明内部函数时，不仅定义了函数的声明，而且还创建了一个闭包。该闭包不仅包含了函数的声明，还包含了在函数声明时该作用域中的所有变量。当最终执行内部函数时，尽管声明时的作用域已经消失了，但是通过闭包，仍然能够访问到原始作用域。
+
+闭包创建了被定义时的作用域内的变量和函数的安全气泡，因此函数获得了执行时所需的内容。该气泡包含了函数和变量，只要函数存在，它就会存在。
+
+!> 谨记每一个通过闭包访问变量的函数都具有一个作用域链，作用域链包含闭包的全部信息，这一点非常重要。
+
+> 因此，虽然闭包是非常有用的，但不能过度使用。使用闭包时，所有的信息都会存储在内存中，直到 JavaScript 引擎确保这些信息不再使用（可以安全地进行垃圾回收）或页面卸载时，才会清理这些信息。
+
 ## 5.2 使用闭包
+
+### 5.2.1 封装私有变量
+
+许多编程语言使用私有变量，这些私有变量是对外部隐藏的对象属性。这是非常有用的一种特性，因为当通过其他代码访问这些变量时，我们不希望对象的实现细节对用户造成过度负荷。
+
+原生 JavaScript不支持私有变量。但是，通过使用闭包，我们可以实现很接近的、可接受的私有变量。
+
+```javascript
+function Ninja() { // 定义 `Ninja` 构造函数
+	var feints = 0; // 在构造器内部，我们定义了一个变量 `feints` 用于保存状态。由于 JavaScript 的作用域规则的限制，因此只能在构造器内部访问该变量
+	this.getFeints = function(){
+		return feints;
+	};
+	this.feint = function(){
+		feints++;
+	};
+}
+
+var ninja1 = new Ninja();
+ninja1.feint();
+
+assert(ninja1.feints === undefined, "And the private data is inaccessible to us.");
+assert(ninja1.getFeints() === 1, "We're able to access the internal feint count.");
+
+/**
+通过测试显示，我们可以通过闭包内部方法获取私有变量的值，但是不能直接访问私有变量
+*/
+
+var ninja2 = new Ninja();
+assert(ninja2.getFeints() === 0, "The second ninja object gets it’s own feints variable.");
+```
+
+
+
+通过使用闭包，可以通过方法对 `ninja` 的状态进行维护，而不允许用户直接访问——这是因为闭包内部的变量可以通过闭包内的方法访问，构造器外部的代码则不能访问闭包内部的变量。
+
+### 5.2.2 回调函数
+
+处理回调函数是另一种常见的使用闭包的情景。回调函数指的是需要在将来不确定的某一时刻异步调用的函数。
+
+```html
+<div id="box1">First Box</div> 
+<script>
+	function animateIt(elementId) {
+		var elem = document.getElementById(elementId);
+		var tick = 0;
+		var timer = setInterval(function(){
+			if (tick < 100) {
+				elem.style.left = elem.style.top = tick + "px";
+				tick++;
+			} else {
+				clearInterval(timer);
+				assert(tick === 100, "Tick accessed via a closure.");
+         assert(elem, "Element also accessed via a closure.");
+         assert(timer, "Timer reference also obtained via a closure." );
+      }
+    }, 10);
+  }
+
+  animateIt("box1");
+</script>
+```
+
+
 
 ## 5.3 通过执行上下文来跟踪代码
 
+JavaScript 引擎执行代码时，每一条语句都处于特定的**执行上下文**中。
+
+```javascript
+function skulk(ninja) {
+	report(ninja + " skulking");
+}
+
+function report(message) {
+	console.log(message);
+}
+
+skulk("Kuma");
+skulk("Yoshi");
+```
+
+
+
 ## 5.4 使用词法环境跟踪变量的作用域
+
+**词法环境（lexical environment）**是 JavaScript 引擎内部用来跟踪标识符与特定变量之间的映射关系。
+
+?> 词法环境是 JavaScript 作用域的内部实现机制，人们通常称为**作用域（scopes）**
+
+### 5.4.1 代码嵌套
+
+词法环境主要基于代码嵌套，通过代码嵌套可以实现代码结构包含另一代码结构。
+
+### 5.4.2 代码嵌套与词法环境
 
 ## 5.5 理解 JavaScript 的变量类型
 
+### 5.5.1 变量可变性
+
+#### `const` 变量
+
+```javascript
+"use strict"
+
+const firstConst = "samurai"; assert(firstConst === "samurai", "firstConst is a samurai");
+
+try {
+	firstConst = "ninja";
+	fail("Shouldn't be here");
+} catch(e) {
+	pass("An exception has occured");
+}
+    
+assert(firstConst === "samurai", "firstConst is still a samurai!");
+
+const secondConst = {};
+secondConst.weapon = "wakizashi";
+assert(secondConst.weapon === "wakizashi", "We can add new properties");
+
+const thirdConst = [];
+assert(thirdConst.length === 0, "No items in our array");  
+    
+thirdConst.push("Yoshi");
+
+assert(thirdConst.length === 1, "The array has changed");
+```
+
+
+
+### 5.5.2 定义变量的关键字与词法环境
+
+#### 使用关键字 `var`
+
+```javascript
+var globalNinja = "Yoshi";
+
+function reportActivity(){
+	var functionActivity = "jumping";
+
+	for(var i = 1; i < 3; i++) {
+		var forMessage = globalNinja + " " + functionActivity;
+		assert(forMessage === "Yoshi jumping", "Yoshi is jumping within the for block");
+		assert(i, "Current loop counter:" + i);
+	}
+
+	assert(i === 3 && forMessage === "Yoshi jumping", "Loop variables accessible outside of the loop");
+}
+
+reportActivity();
+assert(typeof functionActivity === "undefined" && typeof i === "undefined" && typeof forMessage === "undefined", "We cannot see function variables outside of a function");
+```
+
+
+
+#### 使用 `let` 与 `const` 定义具有块级作用域的变量
+
+```javascript
+"use strict"
+const globalNinja = "Yoshi";
+
+function reportActivity(){
+	const functionActivity = "jumping";
+
+	for(let i = 1; i < 3; i++) {
+		let forMessage = globalNinja + " " + functionActivity;
+		assert(forMessage === "Yoshi jumping", "Yoshi is jumping within the for block");
+		assert(i, "Current loop counter:" + i);
+	}
+
+	assert(typeof i === "undefined" && typeof forMessage === "undefined", "Loop variables not accessible outside the loop");
+}
+
+reportActivity();
+assert(typeof functionActivity === "undefined" && typeof i === "undefined" && typeof forMessage === "undefined", "We cannot see function variables outside of a function");
+```
+
+
+
+### 5.5.3 在词法环境中注册标识符
+
+#### 注册标识符的过程
+
+#### 在函数声明之前调用函数
+
+```javascript
+assert(typeof fun === "function", "fun is a function even though its definition isn’t reached yet!");
+
+assert(typeof myFunExp === "undefined", "But we cannot access function expressions");
+
+assert(typeof myLamda === "undefined", "Nor lambda functions");
+
+function fun(){}
+
+var myFunExpr = function(){};
+var myLambda = (x) => x;
+```
+
+
+
+#### 函数重载
+
+```javascript
+assert(typeof fun === "function", "We access the function");
+
+var fun = 3;
+
+assert(typeof fun === "number", "Now we access the number");
+
+function fun(){}
+
+assert(typeof fun == "number", "Still a number");
+```
+
+
+
 ## 5.6 研究闭包的工作原理
+
+### 5.6.1 回顾使用闭包模拟私有变量的代码
+
+```javascript
+function Ninja() {
+	var feints = 0;
+	this.getFeints = function(){
+		return feints;
+	};
+	this.feint = function(){
+		feints++;
+	};
+}
+var ninja1 = new Ninja();
+assert(ninja1.feints === undefined, "And the private data is inaccessible to us.");
+ninja1.feint();
+assert(ninja1.getFeints() === 1, "We're able to access the internal feint count.");
+
+var ninja2 = new Ninja();
+assert(ninja2.getFeints() === 0, "The second ninja object gets it’s own feints variable.");
+```
+
+
+
+### 5.6.2 私有变量的警告
+
+```javascript
+function Ninja() {
+	var feints = 0;
+	this.getFeints = function(){
+		return feints;
+	};
+	this.feint = function(){
+		feints++;
+	};
+}
+var ninja1 = new Ninja();
+ninja1.feint();
+
+var imposter = {};
+imposter.getFeints = ninja1.getFeints;
+
+assert(imposter.getFeints () === 1, "The imposter has access to the feints variable!");
+```
+
+
+
+### 5.6.3 回顾闭包和回调函数的例子
+
+```html
+<div id="box1">First Box</div>
+<div id="box2">Second Box</div>
+  
+<script>
+	function animateIt(elementId) {
+		var elem = document.getElementById(elementId);
+		var tick = 0;
+		var timer = setInterval(function(){
+			if (tick < 100) {
+				elem.style.left = elem.style.top = tick + "px";
+				tick++;
+			} else {
+				clearInterval(timer);
+				assert(tick === 100, "Tick accessed via a closure.");
+				assert(elem, "Element also accessed via a closure.");
+				assert(timer, "Timer reference also obtained via a closure." );
+      }
+    }, 10);
+  }
+    
+	animateIt("box1");
+	animateIt("box2");
+</script>
+```
+
