--- a/docs/JavaScript/JavaScript高级程序设计/13_事件.md
+++ b/docs/JavaScript/JavaScript高级程序设计/13_事件.md
@@ -28,7 +28,26 @@
 
 ### 13.2.3 DOM2级事件处理程序
 
+“DOM2 级事件” 定义了两个方法，用于处理指定和删除事件处理程序的操作：
+
+- `addEventListener()`
+- `removeEventListener()`
+
+所有的 DOM 节点中都包含这两个方法，并且它们都接受3个参数：
+
+- 要处理的事件名
+- 作为事件处理程序的函数
+- 一个布尔值
+  - `true`：表示在**捕获**阶段调用事件处理程序
+  - `false`：表示在**冒泡**阶段调用事件处理程序
+
+使用 DOM2 级方法添加事件处理程序的主要好处是可以添加多个事件处理程序。事件处理程序会按照添加它们的顺序出发。
+
+通过 `addEventListener()` 添加的事件处理程序只能使用 `removeEventListener()` 来移除；移除时传入的参数与添加处理程序时使用的参数相同。这也意味着通过 `addEventListener()` 添加的**匿名函数**将无法移除。
+
 ## 13.3 事件对象
+
+在触发 DOM 上的某个事件时，会产生一个事件对象 event，这个对象中包含着所有与事件有关的信息。
 
 ### 13.3.1 DOM中的事件对象
 
@@ -37,6 +56,10 @@
 ## 13.4 事件类型
 
 ## 13.5 内存和性能
+
+### 13.5.1 事件委托
+
+### 13.5.2 移除事件处理程序
 
 ## 13.6 模拟事件
 
